[b]Version 0.6.5[/b]:

(2008-11-01)
 * Cleanup and reorganization of the config path code. 
   The commandline option -ini-path has been removed and replaced with
   -config-path, which specifies the directory where smplayer will store
   its data (not only smplayer.ini).

(2008-10-30)
 * The reorganization of the subtitles section in preferences is finished.
 * The mplayer devs have added the -volume option in svn r27872, so now the
   hack to try to detect a patched mplayer have been removed. Now smplayer
   will simply use the -volume option if mplayer is r27872 or newer.

(2008-10-28)
 * The subtitles for srt, sub... formats when using the SSA/ASS library, 
   can now be more customized. It's possible to select the font, size,
   colors, bold, italic, outline, shadow... 
   Not finished yet.

(2008-10-27)
 * Added the new option "Correct pts" in Preferences->Advanced. Disabled by
   default because it causes some problems with mkv files.
 * The dialog to jump to a specified time allows now to enter the seconds
   too.


[b]Version 0.6.4[/b]:

(2008-10-22)
 * (Linux) Now smplayer will pop up a warning if the mplayer version is old.
   This popup will appear only once, although there'll be a reminder in the
   status line.
   A mplayer is considered old if it's older than svn r25158 (that includes
   1.0rc2)

(2008-10-21)
 * Now if the SSA/ASS lib is enabled and a file named styles.ass exists in the 
   smplayer config directory ($HOME/.smplayer/ or the application directory if 
   compiled with PORTABLE_APP) smplayer will load it (mplayer option 
   -ass-styles). In this case the color for subtitles and styles configured
   in Preferences->Subtitles WON'T be used.
   In the future smplayer will create that file automatically and the 
   preferences dialog will allow to configure all (or at least the most 
   important) styles.

(2008-10-20)
 * Bugfix: the show equalizer option didn't work when assigned to any of