@@ -550,7 +550,7 @@ The drop-down lists may provide already made regular expression for several lang
         </widget>
        </item>
        <item row="1" column="0" >
-        <widget class="QLabel" name="textLabel2_12" >
+        <widget class="QLabel" name="eof_label" >
          <property name="text" >
           <string>&amp;End of file:</string>
          </property>
@@ -563,7 +563,7 @@ The drop-down lists may provide already made regular expression for several lang
         </widget>
        </item>
        <item row="2" column="0" >
-        <widget class="QLabel" name="textLabel3_6" >
+        <widget class="QLabel" name="novideo_label" >
          <property name="text" >
           <string>&amp;No video:</string>
          </property>
